--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Lily Handt</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="icon" href="img/Favicon.png" type="image/png">
 </head>
 <body>
   <header>
