--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Lily Handt</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="icon" href="img/Favicon.png" type="image/png">
+  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 </head>
 <body>
   <header>
