social edit and took out extra Sunday.

--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
       </div>
       <div class="time_2">
         9:00am - 5:00pm
-        </br>Sun Closed
+        </br>Closed
       </div>
     </div><!--
 --><div class="footer_3">
       <span>info@lilyhandt.com</span>
       <div class="social">
-        <a class="twitter social_sub" href="#" target="_blank">
+        <!-- <a class="twitter social_sub" href="#" target="_blank">
           <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 12"><defs><style>.cls-1{fill:#231f20;}</style></defs><title>Artboard 3</title><path class="cls-1" d="M11.9,1.14a4.86,4.86,0,0,1-1.4.38A2.45,2.45,0,0,0,11.57.18,4.89,4.89,0,0,1,10,.77,2.44,2.44,0,0,0,5.86,3,6.93,6.93,0,0,1,.83.45a2.44,2.44,0,0,0,.76,3.26A2.43,2.43,0,0,1,.48,3.4v0a2.44,2.44,0,0,0,2,2.39,2.45,2.45,0,0,1-1.1,0,2.44,2.44,0,0,0,2.28,1.7,4.9,4.9,0,0,1-3,1,5,5,0,0,1-.58,0,6.91,6.91,0,0,0,3.74,1.1,6.9,6.9,0,0,0,6.95-6.95c0-.11,0-.21,0-.32A5,5,0,0,0,11.9,1.14Z"/></svg>
-        </a>
+        </a> -->
         <a class="facebook social_sub" href="https://www.facebook.com/lilyhandthealthandbeauty/" target="_blank">
           <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 12"><defs><style>.cls-1{fill:#231f20;}</style></defs><title>Artboard 3</title><path class="cls-1" d="M5.42,3.78H3.58V2.57A.49.49,0,0,1,4.09,2h1.3V0H3.6A2.27,2.27,0,0,0,1.15,2.45V3.78H0V5.84H1.15v5.83H3.58V5.84H5.21Z"/></svg>
         </a>
-        <a class="insta social_sub" href="#" target="_blank">
+        <!-- <a class="insta social_sub" href="#" target="_blank">
           <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 12"><defs><style>.cls-1{fill:#231f20;}</style></defs><title>Artboard 3</title><path class="cls-1" d="M9.66,0H2.31A2.32,2.32,0,0,0,0,2.31V9.66A2.32,2.32,0,0,0,2.31,12H9.66A2.32,2.32,0,0,0,12,9.66V2.31A2.32,2.32,0,0,0,9.66,0Zm.66,1.38h.26v2h-2v-2Zm-6,3.38A2.1,2.1,0,1,1,3.88,6,2.11,2.11,0,0,1,4.28,4.76Zm6.53,4.9a1.15,1.15,0,0,1-1.15,1.15H2.31A1.15,1.15,0,0,1,1.17,9.66V4.76H3A3.27,3.27,0,1,0,9,4.76h1.79Z"/></svg>
-        </a>
+        </a> -->
       </div>
     </div>
   </footer>
